File browser closing while loading crash. #74699

Closed
opened 2020-03-12 22:59:33 +01:00 by Martin · 9 comments

System Information
Operating system: Windows-10-10.0.18362-SP0 64 Bits
Graphics card: GeForce GTX TITAN/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 441.87

Blender Version
Broken: version: 2.83 (sub 8), branch: master, commit date: 2020-03-13 10:16, hash: 3652870483
Worked: 2.80 seems OK

Short description of error
When working on a NAS or having many / big files, closing file browser crashes blender while file browser is loading content.

Exact steps for others to reproduce the error

  1. Go to composition view.
  2. Enable use nodes.
  3. Add > Input > Image Sequence.
  4. Navigate to folder containing a lot of images and quickly press {key esc}
**System Information** Operating system: Windows-10-10.0.18362-SP0 64 Bits Graphics card: GeForce GTX TITAN/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 441.87 **Blender Version** Broken: version: 2.83 (sub 8), branch: master, commit date: 2020-03-13 10:16, hash: `3652870483` Worked: 2.80 seems OK **Short description of error** When working on a NAS or having many / big files, closing file browser crashes blender while file browser is loading content. **Exact steps for others to reproduce the error** 1. Go to composition view. 2. Enable use nodes. 3. Add > Input > Image Sequence. 4. Navigate to folder containing a lot of images and quickly press {key esc}
Author

Added subscriber: @m-14

Added subscriber: @m-14
Richard Antalik changed title from File browser closing while loading, crash. to File browser closing while loading crash. 2020-03-13 14:21:16 +01:00

Added subscriber: @iss

Added subscriber: @iss

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
 	blender.exe!filelist_readjob_update(void * flrjv) Řádek 2979	C
 	blender.exe!filelist_readjob_endjob(void * flrjv) Řádek 3003	C
 	blender.exe!wm_jobs_kill_job(wmWindowManager * wm, wmJob * wm_job) Řádek 521	C
 	blender.exe!wm_jobs_timer_ended(wmWindowManager * wm, wmTimer * wt) Řádek 621	C
 	blender.exe!wm_window_free(bContext * C, wmWindowManager * wm, wmWindow * win) Řádek 242	C
 	blender.exe!wm_window_close(bContext * C, wmWindowManager * wm, wmWindow * win) Řádek 462	C
 	blender.exe!wm_handler_fileselect_do(bContext * C, ListBase * handlers, wmEventHandler_Op * handler, int val) Řádek 2230	C
 	blender.exe!wm_handler_fileselect_call(bContext * C, ListBase * handlers, wmEventHandler_Op * handler, const wmEvent * event) Řádek 2368	C
 	blender.exe!wm_handlers_do_intern(bContext * C, wmEvent * event, ListBase * handlers) Řádek 2777	C
 	blender.exe!wm_handlers_do(bContext * C, wmEvent * event, ListBase * handlers) Řádek 2829	C
 	blender.exe!wm_event_do_handlers(bContext * C) Řádek 3224	C
 	blender.exe!WM_main(bContext * C) Řádek 445	C
 	blender.exe!main(int argc, const unsigned char * * UNUSED_argv_c) Řádek 524	C
```> blender.exe!BLI_movelisttolist(ListBase * dst, ListBase * src) Řádek 55 C blender.exe!filelist_readjob_update(void * flrjv) Řádek 2979 C blender.exe!filelist_readjob_endjob(void * flrjv) Řádek 3003 C blender.exe!wm_jobs_kill_job(wmWindowManager * wm, wmJob * wm_job) Řádek 521 C blender.exe!wm_jobs_timer_ended(wmWindowManager * wm, wmTimer * wt) Řádek 621 C blender.exe!wm_window_free(bContext * C, wmWindowManager * wm, wmWindow * win) Řádek 242 C blender.exe!wm_window_close(bContext * C, wmWindowManager * wm, wmWindow * win) Řádek 462 C blender.exe!wm_handler_fileselect_do(bContext * C, ListBase * handlers, wmEventHandler_Op * handler, int val) Řádek 2230 C blender.exe!wm_handler_fileselect_call(bContext * C, ListBase * handlers, wmEventHandler_Op * handler, const wmEvent * event) Řádek 2368 C blender.exe!wm_handlers_do_intern(bContext * C, wmEvent * event, ListBase * handlers) Řádek 2777 C blender.exe!wm_handlers_do(bContext * C, wmEvent * event, ListBase * handlers) Řádek 2829 C blender.exe!wm_event_do_handlers(bContext * C) Řádek 3224 C blender.exe!WM_main(bContext * C) Řádek 445 C blender.exe!main(int argc, const unsigned char * * UNUSED_argv_c) Řádek 524 C ```
Bastien Montagne self-assigned this 2020-03-13 15:43:38 +01:00

Caused by 2c4dfbb002, changing owner of some jobs to scene, but not updating the stop/free functions accordingly...

Caused by 2c4dfbb002, changing owner of some jobs to scene, but not updating the stop/free functions accordingly...

This issue was referenced by ebf3c87912

This issue was referenced by ebf3c87912364296d6548a6e7b09da0deda81b66

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'

@iss would suggest you double check that 2c4dfbb002 commit for all cases where you changed the owner of a job, that you did not forget any other job/timer owner usage change?

@iss would suggest you double check that 2c4dfbb002 commit for all cases where you changed the owner of a job, that you did not forget any other job/timer owner usage change?

@mont29 Will check that.

@mont29 Will check that.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#74699
No description provided.