source/blender/editors/space_file/space_file.c
@@ -191,7 +191,7 @@ static void file_exit(wmWindowManager *wm, ScrArea *sa)
     sfile->previews_timer = NULL;
   }
 
-  ED_fileselect_exit(wm, sa, sfile);
+  ED_fileselect_exit(wm, NULL, sfile);
 }
 
 static SpaceLink *file_duplicate(SpaceLink *sl)
@@ -301,7 +301,7 @@ static void file_refresh(const bContext *C, ScrArea *sa)
   sfile->recentnr = fsmenu_get_active_indices(fsmenu, FS_CATEGORY_RECENT, params->dir);
 
   if (filelist_force_reset(sfile->files)) {
-    filelist_readjob_stop(wm, sa);
+    filelist_readjob_stop(wm, CTX_data_scene(C));
     filelist_clear(sfile->files);
   }
 
